pertemuan-9